correcoes de di, validacoes, docker, models, dtos, mapper, scripts
