# src/controllers/product.controller.ts
@@ -3,6 +3,9 @@ import { inject } from 'inversify';
 import { IProductService } from '../interfaces/product-service.interface';
 import { TYPES } from '../inversify/types';
 import { Product } from '../model/product';
+import { validationMiddleware } from '../middlewares/validation.middleware';
+import { ProductCreateDto } from '../dto/product-create.dto';
+import { ProductUpdateDto } from '../dto/product-update.dto';
 
 @controller('/products')
 export class ProductController {
@@ -18,14 +21,14 @@ export class ProductController {
     return this.service.getById(id);
   }
 
-  @httpPost('/')
-  create(@requestBody() product: Product) {
-    return this.service.create(product);
+  @httpPost('/', validationMiddleware(ProductCreateDto))
+  create(@requestBody() dto: ProductCreateDto) {
+    return this.service.create(dto);
   }
 
-  @httpPut('/:id')
-  update(@requestParam('id') id: string, @requestBody() product: Partial<Product>) {
-    return this.service.update(id, product);
+  @httpPut('/:id', validationMiddleware(ProductUpdateDto))
+  update(@requestParam('id') id: string, @requestBody() dto: Partial<ProductUpdateDto>) {
+    return this.service.update(id, dto);
   }
 
   @httpDelete('/:id')
